14.Middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: elasticsearch
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-www-to-non-www
  namespace: elasticsearch
spec:
  redirectRegex:
    regex: "^https?://www\\.(.*)"
    replacement: "https://$1"
    permanent: true
